@@ -49,6 +49,8 @@ bug report - outstanding bugs are listed here:
 0.76: please submit patches for this section with actual code/doc
       patches!
 
+* pam_unix/support.c: sample use of reentrant NSS function.  Not yet active,
+  because modules do not include _pam_aconf_h! (Bug 440107 - vorlon)
 * doc/Makefile changes - use $(mandir) [courtesy Harald Welte] (Bug
   435760) and add some rules to make/delete the draft rfc I've been
   working on (Task 17426 - agmorgan)
